--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f5f5f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         
         #search-container {
@@ -17,6 +16,7 @@
             max-width: 600px;
             text-align: center;
             position: relative;
+            margin-top: 20px;
         }
         
         #search-form {
